--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,14 @@ body
     padding: 0;
 
     background-color: #E8DF9C;
+    font-family: Helvetica;
 }
 
 /* SIDEBAR */
 .sidebar
 {
-    margin: 0;
-    padding: 0;
-
     width: 20%;
     height: 100%;
-    float: left;
     position: fixed;
     background-color: #F75E50;
 }
@@ -22,8 +19,8 @@ body
 /* MENU */
 .menu
 {
-    margin: 0;
-    padding: 25% 0;
+    margin-top: 100px;
+    padding: 0;
 
     list-style-type: none;
 
@@ -46,7 +43,7 @@ body
 
 .menu li a
 {
-    color: #FFF;
+    color: white;
     text-shadow: 2px 2px #7D7769;
     text-decoration: none;
 }
@@ -57,28 +54,71 @@ body
     text-decoration: underline;
 }
 
-/* FIRST PAGE */
-.first-page
+/* SOCIAL */
+.social
 {
-    height: 100vh;
+    position: absolute;
+    bottom: 15px;
+
+    left: 50%;
+
+    width: 180px;
 }
 
-/* BANNER */
-.banner
+.social--icon-container
 {
-    margin: 0;
-    padding: 7.5vh 0;
+    position: relative;
+    left: -50%;
+}
 
-    text-align: center;
-    font-family: Candlelight;
-    font-size: 6rem;
+.social--icon
+{
+    width: 50px;
+    height: 50px;
+
+    float: left;
+
+    margin: 5px 5px;
+}
+
+.linkedin
+{
+    background: url(../img/linkedin.png);
+    background-size: 50px 50px;
+}
+
+.unity
+{
+    background: url(../img/unity.png);
+    background-size: 50px 50px;
+}
+
+.github
+{
+    background: url(../img/github.png);
+    background-size: 50px 50px;
 }
 
 /* MAIN */
 .main
 {
     margin: 0;
-    padding-left: 20%;
+    width: 80%;
+    float: right;
+}
+
+/* FIRST PAGE */
+.first-page
+{
+    height: 100vh;
+    width: 100%;
+}
+
+/* BANNER */
+.banner
+{
+    display: block;
+    margin: 25px auto; 
 }
 
 /* CONTAINER */
@@ -102,7 +142,7 @@ body
 
 .row--paragraph
 {
-    padding: 15px 10px;
+    padding-left: 10px;
 }
 
 .row--paragraph h1
@@ -110,6 +150,7 @@ body
     color: #7D7769;
 }
 
+/* QUOTE */
 .quote
 {
     height: 100%;
@@ -118,19 +159,25 @@ body
     float: left;
 
     font-size: 1.5rem;
+    font-family: "Times New Roman";
     font-style: italic;
     text-align: center;
     text-decoration: underline;
+    color: white;
+
+    background: #7D7769;
 }
 
+/* DESCRIPTION */
 .description
 {
     width: 100%;
     background: #EAC761;    
-
+    
     padding: 15px 5px;
 }
 
+/* INFO */
 .info
 {
     float: left;
@@ -141,15 +188,25 @@ body
 {
     width: 150px;
     height: 150px;
-
+    
     float: left;
+
+    padding:0 5px;
+    margin-right: 5px;
 }
 
-.info-text
+.info p
 {
-    height: 100%;
+    color: white;
+    line-height: 1.75rem;
+
+    display: inline;
+    background: #F75E50;
+
+    padding: 5px 0;
 }
 
+/* ICON */
 .icon
 {
     width: 33.333%;
@@ -159,15 +216,25 @@ body
     text-align: center;
 }
 
+.icon p
+{
+    background: #91C09E;
+
+    margin: 10px;
+}
+
 .icon img
 {
     display: block;
     margin: auto;
-
+    
     width: 128px;
     height: 128px;
+
+    background: lightgoldenrodyellow;
 }
 
+/* BUTTON */
 .button
 {
     background: #91C09E;
@@ -181,8 +248,6 @@ body
     text-decoration: none;
     color: #FFF;
 
-    /* text-shadow: 2px 2px #000; */
-
     border-radius: 2px;
     box-shadow: 2px 2px #7D7769;
 }
@@ -194,14 +259,9 @@ body
     text-decoration: underline;
 }
 
+/* FONTS */
 @font-face
 {
     font-family: CarterOne;
     src: url(../fonts/carter-one.regular.ttf);
-}
-
-@font-face
-{
-    font-family: Candlelight;
-    src: url(../fonts/candlelight.ttf);
 }
