Adds footer and icon image assets, aswell as some fixes to formating.

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body
 
     background-color: #E8DF9C;
     font-family: Helvetica;
+
+    font-size: 14px;
 }
 
 /* SIDEBAR */
@@ -204,7 +206,7 @@ body
     display: inline;
     background: #F75E50;
 
-    padding: 5px 0;
+    padding: .275rem 0;
 }
 
 /* ICON */
@@ -217,11 +219,23 @@ body
     text-align: center;
 }
 
+.icon h2
+{
+    color: #F75E50;
+    font-family: Cambria;
+    text-shadow: 1px 1px white;
+    margin-bottom: .5rem;
+}
+
 .icon p
 {
     background: #91C09E;
+    color: white;
 
     margin: 10px;
+    padding: .25rem 0;
+
+    border-radius: 5px;
 }
 
 .icon img
@@ -229,10 +243,14 @@ body
     display: block;
     margin: auto;
     
-    width: 128px;
-    height: 128px;
+    width: 100px;
+    height: 100px;
 
-    background: lightgoldenrodyellow;
+    background: white;
+    border-radius: 10px;
+
+    /* filter: blur(1px); */
+    opacity: .95;
 }
 
 .project
@@ -268,6 +286,15 @@ body
 {
     float: right;
     padding: 0 2px 25px 0;
+}
+
+.footer
+{
+    background: #7D7769;
+    color: #E8DF9C;
+    text-align: center;
+
+    padding: .5rem 0;
 }
 
 /* FONTS */
