Updated information - Edited description; - Added link to unity connect page.

--- a/styles/style.css
+++ b/styles/style.css
@@ -100,10 +100,7 @@ body
 
     width: 32px;
     height: 32px;
-}
 
-.social a:first-child
-{
     margin-right: 5px;
 }
 
@@ -115,4 +112,9 @@ body
 .github
 {
     background: url("../img/gh.png");
+}
+
+.unity
+{
+    background: url("../img/un.png");
 }
