--- a/styles/style.css
+++ b/styles/style.css
@@ -93,7 +93,8 @@ body
 
 .social a
 {
-    margin-top: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 
     display: block;
     float: left;
