--- a/styles/general.css
+++ b/styles/general.css
@@ -16,7 +16,8 @@
     --color-accent: rgb(225, 144, 147);
     --color-alt: rgb(136, 170, 200);
 
-    --color-text: rgb(30, 31, 34);
+    --color-titles: rgb(30, 31, 34);
+    --color-paragraphs: rgb(65, 61, 64);
     --color-text-shade: rgb(97, 100, 110);
 }
 
@@ -26,16 +27,16 @@ body {
     padding: 0;
 
     height: 100%;
+
+    scroll-behavior: smooth;
 }
 
 body {
     font-family: 'Cascadia Code', 'Ubuntu', 'Courier New', Courier, monospace;
 
-    color: var(--color-text);
+    color: var(--color-titles);
     font-weight: 300;
     letter-spacing: .025em;
-
-    scroll-behavior: smooth;
 
     white-space: 0;
 
@@ -49,11 +50,55 @@ br {
     background-color: black;
 }
 
+img {
+    filter: drop-shadow(0px 0px 1px var(--color-shade));
+}
+
 p b {
     font-weight: 200;
     color: var(--color-text-shade);
     opacity: 70%;
 }
+
+nav.menu a:hover,
+div.socials a:hover {
+    box-shadow: -3px 3px 0px 0px var(--color-accent);
+
+    transition: .075s;
+    transform: translate(1px, -1px);
+}
+
+p.paragraph a {
+    color: var(--color-alt);
+    text-decoration: none;
+}
+
+p.paragraph a:hover {
+    color: var(--color-accent);
+}
+
+footer {
+    margin-top: 100px;
+
+    flex-shrink: 0;
+
+    color: var(--color-base);
+    text-align: center;
+
+    background-color: var(--color-alt);
+}
+
+footer a {
+    padding-right: 10px;
+
+    color: var(--color-base);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--color-accent);
+}
+
 
 .flex {
     display: flex;
@@ -97,6 +142,23 @@ p.heading {
     color: var(--color-text-shade);
 }
 
+p.paragraph {
+    padding: 0;
+
+    color: var(--color-paragraphs);
+    text-align: justify;
+    line-height: 1.25em;
+}
+
+p.paragraph b {
+    color: black;
+    font-weight: 350;
+}
+
+p br {
+    margin-bottom: 10px;
+}
+
 p.align-right {
     text-align: right;
 }
@@ -111,7 +173,7 @@ p.no-margin {
 }
 
 .padding-single {
-    padding: 5px;
+    padding: 15px;
 }
 
 .padding-double {
@@ -134,16 +196,4 @@ p.separator {
     padding-bottom: 5px;
 
     box-shadow: 0px 1px 0px 0px var(--color-alt);
-}
-
-footer {
-    margin-top: 50px;
-
-    flex-shrink: 0;
-
-    text-align: center;
-    color: var(--color-base);
-
-    background-color: var(--color-alt);
-
 }
